[gd_scene load_steps=11 format=2]

[ext_resource path="res://Outline.gd" type="Script" id=1]
[ext_resource path="res://scenes/PlayingSpot.gd" type="Script" id=2]
[ext_resource path="res://misc/uitexttheme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Control.gd" type="Script" id=4]
[ext_resource path="res://scenes/BettingInfo.gd" type="Script" id=5]
[ext_resource path="res://scenes/HBoxContainer.gd" type="Script" id=6]
[ext_resource path="res://scenes/ChipCenter.gd" type="Script" id=7]
[ext_resource path="res://scenes/VBoxContainer.gd" type="Script" id=8]
[ext_resource path="res://misc/minichipTheme.tres" type="Theme" id=9]
[ext_resource path="res://scripts/TurnIndicator.gd" type="Script" id=10]

[node name="PlayingSpot" type="Control" groups=["pSpot"]]
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
script = ExtResource( 2 )
outlineColor = Color( 0.0470588, 0.14902, 0.0980392, 0.392157 )

[node name="CENTER" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="Node2D" parent="CENTER"]
script = ExtResource( 1 )
color = Color( 0.0470588, 0.14902, 0.0980392, 0.392157 )
radius = 110
width = 10

[node name="TurnIndicator" type="Node2D" parent="CENTER"]
script = ExtResource( 10 )
color = Color( 0.733333, 0.698039, 0.164706, 0.258824 )
radius = 116
width = 3

[node name="CARD1" type="Control" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.5
margin_left = -0.00900269
margin_right = -0.00900269
rect_rotation = -4.0

[node name="CARD2" type="Control" parent="."]
anchor_left = 0.65
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
rect_rotation = 8.0

[node name="ValueControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = -0.2
anchor_right = 0.5
anchor_bottom = -0.2
margin_left = -17.4
margin_top = -17.6
margin_right = 17.6
margin_bottom = 17.4
script = ExtResource( 4 )

[node name="HandValue" type="Label" parent="ValueControl"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
text = "21"
align = 1
valign = 1

[node name="BettingInfo" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.2
anchor_right = 0.5
anchor_bottom = 1.2
margin_left = -100.0
margin_top = -15.0
margin_right = 100.0
margin_bottom = 85.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="BettingInfo"]
anchor_left = 0.5
anchor_top = 0.14
anchor_right = 0.5
anchor_bottom = 0.14
margin_left = 8.39999
margin_top = -9.0
margin_right = 8.39999
margin_bottom = 6.0
grow_horizontal = 2
rect_scale = Vector2( 0.6, 0.6 )
alignment = 1

[node name="BetAmount" type="Label" parent="BettingInfo/VBoxContainer"]
margin_right = 42.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "100"

[node name="BetDisplay" type="HBoxContainer" parent="BettingInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -15.0
margin_right = 25.0
margin_bottom = 15.0
grow_horizontal = 2
alignment = 1
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="BettingInfo/BetDisplay"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
alignment = 1
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="BettingInfo/BetDisplay/VBoxContainer"]
margin_top = 15.0
margin_right = 50.0
margin_bottom = 15.0
theme = ExtResource( 9 )
alignment = 1
script = ExtResource( 6 )

[node name="CardPivot" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
